# indie-studio

./: .gitignore  README.md
Cmake/: CMakeLists.txt  compile_project.sh
Cmake/cmake/: Findraylib.cmake
Core/: Errors.cpp  Errors.hpp  Event.cpp  Event.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  main.cpp
Core/Game/: Map.cpp  Map.hpp
Core/Game/Object3D/: BlockD.cpp  BlockD.hpp  BlockI.cpp  BlockI.hpp  Bomb.cpp  Bomb.hpp  Bonus.cpp  Bonus.hpp  Character.cpp  Character.hpp  Fire.cpp  Fire.hpp  IA.cpp  IA.hpp  Mesh.cpp  Mesh.hpp  Model3D.cpp  Model3D.hpp
Core/Menu/: Button.cpp  Button.hpp  ButtonEvent.hpp  CheckBox.cpp  CheckBox.hpp
Core/Menu/Object2D/: Model2D.cpp  Model2D.hpp  Sprite.cpp  Sprite.hpp
Music/: IMusic.cpp  IMusic.hpp  ISound.cpp  ISound.hpp
VisualLib/: A Very Brady Special.txt  Cherry Picking.txt  Holiday Weasel.txt  MickeyAnim.iqm  MickeyDeath.iqm  MickeyDeathAnim.iqm
